# serial-runner

./: .gitignore  README.md  pyproject.toml
plugins/: ws-ap3825i.yaml
serial_runner/: __init__.py  cli.py  daemon.py  keys.py  llm.py  runbook.py  watch.py
