[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-runner"
version = "0.1.0"
description = "AI-assisted serial terminal with runbook plugins"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]

[project.scripts]
serial-runner = "serial_runner.cli:main"

[tool.setuptools.packages.find]
include = ["serial_runner*"]

[tool.setuptools.package-data]
"*" = ["plugins/*.yaml"]
